src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Calculated_Service_Days__c</fullName>
        <formula>(Amount*0.1)/2500</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Service Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Can_champion_explain_why_were_Unique__c</fullName>
        <inlineHelpText>5: Yes and the customer can map 3 of our uniques to core business needs
4: Yes, 2 uniques
3: Yes, 1 unique
2: Yes, can generally explain our uniques
1: No</inlineHelpText>
        <label>Can champion explain why we&apos;re [U]nique?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Champion_Commits_to_Meeting_with_EB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Champion Commits to Meeting with EB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Champion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person with power and influence who is actively selling on your behalf.</description>
        <inlineHelpText>The person with power and influence who is actively selling on your behalf.</inlineHelpText>
        <label>Champion (C)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Champion)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>For channel deals only</inlineHelpText>
        <label>Partner Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Partner Primary Contact)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cisco_Hosts_in_this_Account__c</fullName>
        <label>Cisco Hosts in this Account</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cisco_Hosts_in_this_Opportunity__c</fullName>
        <label>Cisco Hosts in this Opportunity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cisco_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cisco Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cisco_Origination_Source__c</fullName>
        <label>Cisco Origination Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Turbo</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                    <isActive>false</isActive>
                    <label>Direct</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cisco_Royalty_Status__c</fullName>
        <description>Cisco Royalty Payment Status</description>
        <label>Cisco Royalty Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Received</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cisco_Total_Deal_Amount__c</fullName>
        <label>Cisco Total Deal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cisco_Total_Deal_Amount_x2__c</fullName>
        <formula>IF(Cisco_Opportunity__c = TRUE, Amount + Amount, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cisco Total Deal Amount x2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Close_Date_Month__c</fullName>
        <formula>DATE(YEAR(CloseDate),MONTH(CloseDate),1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Close_Date_Period_Last_X_Days__c</fullName>
        <formula>IF(CloseDate&gt;=TODAY()-30,1, 
IF(CloseDate&gt;=TODAY()-60,2, 
IF(CloseDate&gt;=TODAY()-90,3, 
4)))</formula>
        <label>Close Date Period (Last X Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_Date_Period_for_TVs__c</fullName>
        <formula>IF(CloseDate=TODAY(),1, 
IF(CloseDate&gt;=TODAY()-MOD(TODAY()-DATE(1900, 1, 7), 7),2, 
IF(CloseDate&gt;=DATE(YEAR(TODAY()),MONTH(TODAY()),1),3, 
IF(FLOOR(( 13 - IF( MONTH( CloseDate)=1, MONTH( CloseDate) + 12, MONTH( CloseDate))) / 3 )= FLOOR(( 13 - IF( MONTH( TODAY())=1, MONTH( TODAY()) + 12, MONTH( TODAY()))) / 3 ),4, 
5))))</formula>
        <label>Close Date Period for TVs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_Date_adj_for_Loss__c</fullName>
        <formula>IF(OR(TEXT(StageName)=&quot;Closed Lost&quot;,TEXT(StageName)=&quot;Unqualified&quot;),Lost_Unqual_Date__c,CloseDate)</formula>
        <label>Close Date (adj for Loss)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Close_Date_for_Brain__c</fullName>
        <formula>IF(TEXT(Type)=&quot;Maintenance Renewal&quot;,Booking_Date__c,CloseDate)</formula>
        <label>Close Date (for Brain)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Close_ID_by_Tenure_at_Close_BDR__c</fullName>
        <formula>Date_for_Win_Loss__c-Identified_By__r.Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close ID by Tenure at Close (BDR)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_Plan_Reviewed_by_Tech_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Close Plan Reviewed by Tech Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Bookings__c</fullName>
        <formula>IF(TEXT(StageName)=&quot;Closed Won&quot;,Amount,NULL)</formula>
        <label>Closed Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Closed_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closed Lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Closed Opportunities</relationshipLabel>
        <relationshipName>Closed_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cloud_Co_Sell_Submission__c</fullName>
        <description>Allows a sales rep to submit an opportunity for approval as a Cloud Provider Co-Sell opportunity. Filling this field will trigger an email notification via workflow to the Alliances team for approval.</description>
        <inlineHelpText>Select Cloud provider to submit as a co-sell opportunity</inlineHelpText>
        <label>Cloud Co-Sell Submission</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>Amazon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cloud_Native_Targets__c</fullName>
        <inlineHelpText>Please select all containter/cloud native targets for POV</inlineHelpText>
        <label>Container Targets</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>- none -</fullName>
                </value>
                <value>
                    <fullName>Kubernetes</fullName>
                </value>
                <value>
                    <fullName>OpenShift</fullName>
                </value>
                <value>
                    <fullName>CloudFoundry</fullName>
                </value>
                <value>
                    <fullName>Pivotal PKS</fullName>
                </value>
                <value>
                    <fullName>AKS</fullName>
                </value>
                <value>
                    <fullName>EKS</fullName>
                </value>
                <value>
                    <fullName>GKS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cloud_Opportunity_type__c</fullName>
        <label>Cloud Opportunity type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cloud only</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
                <value>
                    <fullName>On Prem only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cloud_Partner_Influencer_Date_Stamp__c</fullName>
        <description>Stamped by workflow. Stamps the date when the cloud partner influencer was first set on the opportunity.</description>
        <label>Cloud Partner Influencer (Date Stamp)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cloud_Partner_Influencer__c</fullName>
        <description>Field used to track opportunities where a cloud partner is working with our team to help influence the opportunity</description>
        <label>Cloud Partner Influencer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>Microsoft Azure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cloud_Partner_Originated__c</fullName>
        <description>Dependent picklist to indicate whether the opportunity was brought to us by the cloud influence partner</description>
        <label>Cloud Partner Originated</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cloud_Partner_Influencer__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cloud_Targets__c</fullName>
        <label>Cloud Targets</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>- none-</fullName>
                </value>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>Azure</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commercial_License_Key__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commercial License Key?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_Split_Details__c</fullName>
        <label>Commission Split Details</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commit_Met__c</fullName>
        <formula>AND(BIP_Completed__c,
Exec_Buy_In_on_BIP__c,
CX_CoE_Introduced__c,
Funding_Approved__c,
Agreement_on_Contract_Terms__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commit Met</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compelling_Reason_to_Buy_Last_Updated__c</fullName>
        <label>Compelling Reason to Buy Date Stamp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Compelling_Reason_to_Buy_Now__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A reason to buy now has been established with the customer.</inlineHelpText>
        <label>Compelling Reason to Buy Now</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compile_Assessment_Deliverable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MSFT field</description>
        <label>Compile Assessment Deliverable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compile_Optimization_Deliverable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MSFT field</description>
        <label>Compile Optimization Deliverable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compile_Optimization_Deliverable_opt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MSFT field</description>
        <label>Compile Optimization Deliverable (opt)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Joint_Post_Sales_Call_w_Cust__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of Cisco Deal Tracking</description>
        <inlineHelpText>Completed Joint Post-Sales Call with Customer</inlineHelpText>
        <label>Completed Joint Post-Sales Call w/ Cust</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compute_Targets__c</fullName>
        <label>Compute Targets</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>- none -</fullName>
                </value>
                <value>
                    <fullName>Cisco UCS</fullName>
                </value>
                <value>
                    <fullName>Cisco Hyperflex</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>Dell</fullName>
                </value>
                <value>
                    <fullName>Nutanix</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conflict_Check_Exec_Approval_MSFT__c</fullName>
        <label>Conflict Check (Exec Approval)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Connected_With_Budget_Holder__c</fullName>
        <label>Connected With Budget Holder</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Role_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of Contact Roles attached to the opportunity</description>
        <label>Number of Key Stakeholders Engaged</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Control_Module_License_Features__c</fullName>
        <inlineHelpText>Edition Guide:
Workload - EOM + Storage and Fabric
Application - EOM + Storage, Fabric, Network, Application Control
Cloud Native - EOM - Storage, Fabric, Network, Application Control, Container, Public Cloud</inlineHelpText>
        <label>Additional License Features</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>storage</fullName>
                </value>
                <value>
                    <fullName>fabric</fullName>
                </value>
                <value>
                    <fullName>network_control</fullName>
                </value>
                <value>
                    <fullName>public_cloud</fullName>
                </value>
                <value>
                    <fullName>cloud_cost</fullName>
                </value>
                <value>
                    <fullName>container_control</fullName>
                </value>
                <value>
                    <fullName>app_control</fullName>
                </value>
                <value>
                    <fullName>planner</fullName>
                </value>
                <value>
                    <fullName>vdi_control</fullName>
                </value>
                <value>
                    <fullName>scaling</fullName>
                </value>
                <value>
                    <fullName>custom_policies</fullName>
                </value>
                <value>
                    <fullName>SLA</fullName>
                </value>
                <value>
                    <fullName>assessment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Control_Module_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Control Module Only?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Control_Module_Product_Count__c</fullName>
        <label>Control Module Product Count</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Name_Text__c</field>
            <operation>contains</operation>
            <value>Control Module,Application Performance Manager,ACM,VCM,FCM,SCM,HCCM,NCM,CCM</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Core_Update_Date__c</fullName>
        <label>Core Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_Date_for_Falloff__c</fullName>
        <formula>IF(AND(CONTAINS(Name,&quot;placeholder for unattached demo&quot;),NOT(ISBLANK(First_Demo_Date__c))),
First_Demo_Date__c,DATEVALUE(CreatedDate))</formula>
        <label>Created Date (for Falloff)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Hypervisor__c</fullName>
        <description>WI Shares field</description>
        <label>Current Hypervisor (P)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Management_SolutionOLD__c</fullName>
        <label>Current Management SolutionOLD</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VMware vCOPS</fullName>
                </value>
                <value>
                    <fullName>Dell (Foglight vOps)</fullName>
                </value>
                <value>
                    <fullName>Dell (vFoglight)</fullName>
                </value>
                <value>
                    <fullName>Dell (vKernel)</fullName>
                </value>
                <value>
                    <fullName>Dell (vOPS)</fullName>
                </value>
                <value>
                    <fullName>Veeam ONE</fullName>
                </value>
                <value>
                    <fullName>Solarwinds</fullName>
                </value>
                <value>
                    <fullName>NetApp OnCommand</fullName>
                </value>
                <value>
                    <fullName>Cirba</fullName>
                </value>
                <value>
                    <fullName>Netuitive</fullName>
                </value>
                <value>
                    <fullName>BMC</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>Virtual Instruments</fullName>
                </value>
                <value>
                    <fullName>Reflex</fullName>
                </value>
                <value>
                    <fullName>Xangati</fullName>
                </value>
                <value>
                    <fullName>Embotics</fullName>
                </value>
                <value>
                    <fullName>CapIQ</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Percent_Virtualized__c</fullName>
        <inlineHelpText>What percentage of servers in the infrastructure are running as VMs?  For example if a customer had 100 total servers and 50 of them are now running as VMs, they are 50% virtualized.</inlineHelpText>
        <label>Current Percent VirtualizedOLD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_VM_Density_VMs_per_Host__c</fullName>
        <formula>IF(OR(ISBLANK(of_Virtual_Machines__c),ISBLANK(of_Hosts__c)),NULL,of_Virtual_Machines__c/of_Hosts__c)</formula>
        <label>Current VM Density (VMs per Host)OLD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_of_Operators__c</fullName>
        <inlineHelpText>How many FTEs are currently managing the environment?</inlineHelpText>
        <label>Current # of OperatorsOLD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Experience_Owner__c</fullName>
        <description>This value will be populated by a formula pulling the entry from the Account Record - ccm</description>
        <formula>Account.Customer_Experience_Owner3__r.Full_Name__c</formula>
        <label>Customer Experience Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Product_Usage__c</fullName>
        <inlineHelpText>Track how the customer is using the product (this field is used mostly by the support team)</inlineHelpText>
        <label>Customer Product UsageOLD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Minimal or no use</fullName>
                </value>
                <value>
                    <fullName>Time-to-time troubleshooting</fullName>
                </value>
                <value>
                    <fullName>Monitoring &amp; reporting</fullName>
                </value>
                <value>
                    <fullName>Planning scenarios</fullName>
                </value>
                <value>
                    <fullName>Manual recommendations</fullName>
                </value>
                <value>
                    <fullName>Automated recommendations</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Referral_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox is marked as true once a Referral task is completed in Opportunity. Set by the TaskSetOppReferralCompleted on the TaskMethods and setOppReferralMet on TaskFutureMethods</description>
        <label>Customer Referral Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Referral_Request_Notes__c</fullName>
        <inlineHelpText>Please provide notes for your Customer Referral Request to assist the CX team with finding and tailoring a referral for your specific needs.</inlineHelpText>
        <label>Customer Referral Request Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_uses_Public_Cloud__c</fullName>
        <label>Customer Cloud Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Private Cloud</fullName>
                </value>
                <value>
                    <fullName>Hybrid Cloud</fullName>
                </value>
                <value>
                    <fullName>Public Cloud</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DDealRegq3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>WI question 2 from Deal Lead</description>
        <label>Customer Demo Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DQ_Alternatives_Status_Quo_Last_Updated__c</fullName>
        <label>DQ Alternatives &amp; Status Quo Date Stamp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Attributed_to_DiscoverOrg__c</fullName>
        <formula>Account.DSCORGPKG__DiscoverOrg_First_Update__c  &lt;  CreatedDate</formula>
        <label>Attributed to DiscoverOrg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Converted_from_Discoverorg_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted from Discoverorg Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DXC_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates whether this opportunity is a DXC Assessment</description>
        <label>DXC Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DXC_POC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates whether the current opportunity is a DXC POC</description>
        <label>DXC POC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_License_Key_Issued__c</fullName>
        <label>Date License Key Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted_for_Customer_Approval__c</fullName>
        <description>This field is stamped with the date on which the status of a MSFT opp is moved to “Pending Approval – Customer” by a WFR/FU
WFR:  Date of MSFT Customer Approval
FU:  Date_Submitted_for_Customer_Approval__c</description>
        <label>Date Submitted for Customer Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted_for_MSFT_Approval_MSFT__c</fullName>
        <label>Date Submitted for MSFT Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Surveyed__c</fullName>
        <inlineHelpText>Date when the customer product usage data was collected (this field is used mostly by the support team)</inlineHelpText>
        <label>Date SurveyedOLD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_for_Win_Loss__c</fullName>
        <formula>IF(TEXT(StageName)=&quot;Closed Won&quot;,CloseDate,
IF(TEXT(StageName)=&quot;Closed Lost&quot;,Lost_Unqual_Date__c,
NULL))</formula>
        <label>Date for Win/Loss</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_moved_to_Complete_MSFT__c</fullName>
        <label>Date moved to Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Between_First_Demo_and_Eval_Start__c</fullName>
        <formula>IF(OR(ISBLANK(Eval_Start_Date__c),ISBLANK(First_Demo_Date__c)),NULL,Eval_Start_Date__c-First_Demo_Date__c)</formula>
        <label>Days Between First Demo and Eval Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Between_First_Demo_and_Pipeline_Add__c</fullName>
        <formula>Opportunity_ID_Date__c - First_Demo_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Between First Demo and Pipeline Add</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Between_Opp_Creation_and_Pipe_Add__c</fullName>
        <formula>IF(ISBLANK(Opportunity_ID_Date__c),NULL,Opportunity_ID_Date__c-DATEVALUE(CreatedDate))</formula>
        <label>Days Between Opp Creation and Pipe Add</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Between_Opp_ID_and_Eval_Start__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(Opportunity_ID_Date__c)),NOT(ISBLANK(Eval_Start_Date__c))),Eval_Start_Date__c - Opportunity_ID_Date__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Between Opp ID and Eval Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Between_Upside_and_Strong_Upside__c</fullName>
        <formula>IF(ISBLANK(Move_to_Strong_Upside_Date__c ),
      IF(ISPICKVAL(StageName,&quot;Closed Lost&quot;),  
         (Close_Date_adj_for_Loss__c - Move_to_Upside_Date__c ),
         (TODAY() - Move_to_Upside_Date__c )
          ),              
      (Move_to_Strong_Upside_Date__c - Move_to_Upside_Date__c )                                           
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Between Upside and Strong Upside</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_From_Creation_To_ID_del__c</fullName>
        <formula>IF(ISBLANK(Opportunity_ID_Date__c),NULL,Opportunity_ID_Date__c-DATEVALUE(CreatedDate))</formula>
        <label>Days From Creation To ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Exec_Visit__c</fullName>
        <formula>IF( ISBLANK(Last_Executive_Visit__c),
365,
TODAY() -  Last_Executive_Visit__c)/ Account.Opps_open_Pipe__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Exec Visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Most_Recent_Outcome_Change__c</fullName>
        <formula>IF(NOT(ISBLANK(Most_Recent_Outcome_Change_Modified__c)),TODAY()-DATEVALUE(Most_Recent_Outcome_Change_Modified__c),NULL)</formula>
        <label>Days Since Most Recent Outcome/Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Next_Steps_Last_Updated__c</fullName>
        <formula>IF(NOT(ISBLANK(Next_Steps_Last_Updated__c)),TODAY()-Next_Steps_Last_Updated__c,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Next Steps Last Updated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_To_Close__c</fullName>
        <formula>if (  ispickval( StageName , &quot;Closed Won&quot;), 45, CloseDate - Today())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days To Close</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_Demo_to_Socket_Automation__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(First_Socket_Automation_Date__c)),NOT(ISBLANK(First_Demo_Date__c))),First_Socket_Automation_Date__c - First_Demo_Date__c,null)</formula>
        <label># Days from Demo to Socket Automation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>